--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
     var item4 = "";
     var item5 = "";
     $(function () {
-        $('#user').html(getParameters('name').split(' ')[0]+"님의 정보");
+        $('#user').html(getParameters('name')+"님의 정보");
         $('#profile').attr('src', urls + getParameters('img'));
         
         
