--- a/index.html
+++ b/index.html
@@ -78,12 +78,12 @@
             <li class="time" id="clock">오전 11:20</li>
         </ul>
     </footer>
-    <div id="myModal" class="modal">
+    <div id="myModal" class="modal" >
         <!-- Modal content -->
         <div class="modal-content">
             <span class="close">&times;</span>
             <p>도움말 폴더</p>
-            <iframe style="display:block; height: 100vh" src="http://ko.mbti.wikidok.net/wp-d/60afd3a75ab6d70c1e8a4852"></iframe>
+            <iframe style="display:block; width: 47vw; height: 25vh" src="http://ko.mbti.wikidok.net/wp-d/60afd3a75ab6d70c1e8a4852"></iframe>
         </div>
     </div>
 </body>
