--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
         <!-- Modal content -->
         <div class="modal-content">
             <span class="close">&times;</span>
-            <iframe style="display:block; width: 47vw; height: 25vh" src="http://ko.mbti.wikidok.net/wp-d/60afd3a75ab6d70c1e8a4852"></iframe>
+            <iframe style="display:block; width: 47vw; height: 25vh" src="https://ko.mbti.wikidok.net/wp-d/60afd3a75ab6d70c1e8a4852"></iframe>
         </div>
     </div>
 </body>
