--- a/public/food.html
+++ b/public/food.html
@@ -66,10 +66,9 @@
             $('#user').html("잘못된 접근")
     }
     $(function () {
-        $('#user_folder,#tooltip,#lotto,#myBtn,#game,#trash,#cook').dad({
-            draggable: "#user_folder,#tooltip,#lotto,#myBtn,#game,#trash,#cook"
+        $('#trash,#myBtn').dad({
+            draggable: "#trash,#myBtn"
         });
-        // $("#user_folder,#tooltip,#lotto,#myBtn,#game,#trash,#cook").draggable();
         
         $('#start').click(function () {
 
