--- a/public/food.html
+++ b/public/food.html
@@ -17,31 +17,31 @@
         <ul>
         <div name="item">
             <li class="folder" style="cursor: pointer;">
-                <img id="item1" src="./images/nfolder.png" alt="the ntrash" >
+                <img id="item1" src="" alt="the ntrash" >
                 아이템1
             </li>
         </div>
         <div name="item">
             <li class="folder" style="cursor: pointer;">
-                <img id="item2" src="./images/nfolder.png" alt="the ntrash" >
+                <img id="item2" src="" alt="the ntrash" >
                 아이템2
             </li>
         </div>
         <div name="item">
             <li class="folder" style="cursor: pointer;">
-                <img id="item3" src="./images/nfolder.png" alt="the ntrash" >
+                <img id="item3" src="" alt="the ntrash" >
                 아이템3
             </li>
         </div>
         <div name="item">
             <li class="folder" style="cursor: pointer;">
-                <img id="item4" src="./images/nfolder.png" alt="the ntrash" >
+                <img id="item4" src="" alt="the ntrash" >
                 아이템4
             </li>
         </div>
         <div name="item">
             <li class="folder" style="cursor: pointer;">
-                <img id="item5" src="./images/nfolder.png" alt="the ntrash" >
+                <img id="item5" src="" alt="the ntrash" >
                 아이템5
             </li>
         </div>
@@ -69,7 +69,7 @@
 <script src="/js/jquery.dad.js"></script>
 <script src="/js/jquery.dad.min.js"></script>
 <script language="javascript">
-    var urls = "//t1.daumcdn.net/cafeattach/"
+    var urls = "http://t1.daumcdn.net/cafeattach/"
     $(function () {
         $("[name='item']").dad({
             draggable: "[name='item']"
