--- a/public/food.html
+++ b/public/food.html
@@ -71,7 +71,7 @@
 <script language="javascript">
     var urls = "http://t1.daumcdn.net/cafeattach/"
     $(function () {
-        $("[name='item']").dad({
+        $("div[name='item']").dad({
             draggable: "[name='item']"
         });
         
