--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
                 </a>
             </li>
             <li>
-                <input type="text" id="saturation-demo" class="form-control demo" onchange="coloron(value)" data-control="saturation" value="#0088cc">
+                <input type="text" id="saturation-demo" class="form-control demo" onchange="coloron(value)" data-control="saturation" value="#FC5C7D">
             </li>
             <li class="time" id="clock">오전 11:20</li>
         </ul>
@@ -128,15 +128,12 @@
     var item4 = "";
     var item5 = "";
     $(function () {
-        $('#user_folder,#tooltip,#lotto,#myBtn,#game,#trash,#cook,.ready').dad({
-            draggable: "#user_folder,#tooltip,#lotto,#myBtn,#game,#trash,#cook,.ready"
+        $('#user_folder,#tooltip,#lotto,#myBtn,#game,#trash,#cook').dad({
+            draggable: "#user_folder,#tooltip,#lotto,#myBtn,#game,#trash,#cook"
         });
 
         $('.demo').minicolors();
 
-        $(".ready").on("dadDragStart", function (e, targetElement) {
-            alert("옮기지마세요!")
-        })
         // $("#user_folder,#tooltip,#lotto,#myBtn,#game,#trash,#cook").draggable();
         if(getParameters('name') != undefined){
             $('#user').html(getParameters('name')+"님의 정보");
