--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
                 </a>
             </li>
             <li>
-                <input type="text" id="saturation-demo" class="form-control demo" onchange="coloron(value)" data-control="saturation" value="#FC5C7D">
+                <input type="text" id="saturation-demo" class="form-control demo" onchange="coloron(value)" data-control="saturation" value="#008080">
             </li>
             <li class="time" id="clock">오전 11:20</li>
         </ul>
