--- a/public/food.html
+++ b/public/food.html
@@ -17,31 +17,31 @@
         <ul>
         <div name="item">
             <li class="folder" style="cursor: pointer;">
-                <img id="item1" src="" alt="the ntrash" >
+                <img id="item1" src="" >
                 아이템1
             </li>
         </div>
         <div name="item">
             <li class="folder" style="cursor: pointer;">
-                <img id="item2" src="" alt="the ntrash" >
+                <img id="item2" src=""  >
                 아이템2
             </li>
         </div>
         <div name="item">
             <li class="folder" style="cursor: pointer;">
-                <img id="item3" src="" alt="the ntrash" >
+                <img id="item3" src=""  >
                 아이템3
             </li>
         </div>
         <div name="item">
             <li class="folder" style="cursor: pointer;">
-                <img id="item4" src="" alt="the ntrash" >
+                <img id="item4" src=""  >
                 아이템4
             </li>
         </div>
         <div name="item">
             <li class="folder" style="cursor: pointer;">
-                <img id="item5" src="" alt="the ntrash" >
+                <img id="item5" src=""  >
                 아이템5
             </li>
         </div>
@@ -108,21 +108,15 @@
         }
     };
 
-    if(getParameters('item1') != undefined){
-        var item1 = urls + getParameters('item1')
-        var item2 = urls + getParameters('item2')
-        var item3 = urls + getParameters('item3')
-        var item4 = urls + getParameters('item4')
-        var item5 = urls + getParameters('item5')
-            $('#item1').attr('src', item1);
-            $('#item2').attr('src', item2);
-            $('#item3').attr('src', item3);
-            $('#item4').attr('src', item4);
-            $('#item5').attr('src', item5);
+    for(i=1; i<=5; i++){
+    if(getParameters('item'+i) != undefined){
+        var item = urls + getParameters('item'+i)
+            $('#item'+i).attr('src', item);
+
         }else{
-            $('#trash').html("잘못된 접근")
+            $('#item'+i).css("display","none;")
+        }
     }
-    
     var clockTarget = document.getElementById("clock");
     function colorChange() {
         var color = ["#FC5C7D", "#6A82FB", "#38ef7d", "#fffbd5", "#b20a2c", "#CAC531"];
