--- a/public/food.html
+++ b/public/food.html
@@ -109,12 +109,12 @@
     };
 
     for(i=1; i<=5; i++){
-    if(getParameters('item'+i) != "undefined"){
-        var item = urls + getParameters('item'+i)
+    if(getParameters('item'+i) != "undefined" && getParameters('item'+i) != undefined){
+        var item = urls + getParameters('item'+i);
             $('#item'+i).attr('src', item);
 
         }else{
-            $('div[name="item"]').css("display","none;")
+            $('div[name="item"]').css("display","none;");
         }
     }
     var clockTarget = document.getElementById("clock");
