--- a/index.html
+++ b/index.html
@@ -78,10 +78,10 @@
                 공사중
             </li>
         </div>
-        <div class="ready">
-            <li name="test" style="cursor: pointer;">
-                <img src="public/images/barrier.png" alt="it is a nfolder">
-                공사중
+        <div id="pet">
+            <li name="pet" style="cursor: pointer;">
+                <img id="petimg" src="" alt="Error" onerror="this.src='public/images/warning.png';">
+                <span id="petnm">펫</span>
             </li>
         </div>
         </ul>
@@ -120,7 +120,7 @@
 <script src="js/jquery.dad.min.js"></script>
 <script src="https://developers.kakao.com/sdk/js/kakao.min.js"></script>
 <script language="javascript">
-    
+
     var urls = "http://t1.daumcdn.net/cafeattach/"
     var item1 = "";
     var item2 = "";
@@ -128,6 +128,10 @@
     var item4 = "";
     var item5 = "";
     $(function () {
+        $(document).ready(function() {
+        $("#cook").animate({left: "+=500"}, 2000);
+        $("#cook").animate({left: "-=300"}, 1000);
+    });
         $('#user_folder,#tooltip,#lotto,#myBtn,#game,#trash,#cook').dad({
             draggable: "#user_folder,#tooltip,#lotto,#myBtn,#game,#trash,#cook"
         });
@@ -138,6 +142,8 @@
         if(getParameters('name') != undefined){
             $('#user').html(getParameters('name')+"님의 정보");
             $('#profile').attr('src', urls + getParameters('img'));
+            $('#petnm').html(getParameters('petnm'));
+            $('#petimg').attr('src', urls + getParameters('pet'));
         }else{
             $('#user').html("잘못된 접근")
         }
@@ -178,7 +184,7 @@
             item2 = getParameters('item2');
             item3 = getParameters('item3');
             item4 = getParameters('item4');
-            item5 = getParameters('item5');+
+            item5 = getParameters('item5');
             $(location).attr('href', url + '?item1=' + item1 + '&item2=' + item2 + '&item3=' + item3 + '&item4=' + item4 + '&item5=' + item5);
         });
 
